# APs_PasswordManager_Version2

./: .gitignore  Cargo.toml  PasswordRecords.json  README.md  main.rs
password_api/: .env  Cargo.toml
password_api/.sqlx/: query-d492c7da7297ddc5448f8f9dee0de5c056c2295e1b8b6aaf02ffc1c0d539090a.json  query-f56144f365f50d7d78458aee0edf1f19d19882dc321a3edb26a638dd7196a73a.json
password_api/src/: main.rs
src/: PasswordRecords.json  add_entry.rs  create_user_data.rs  db.rs  db_test.rs  hashPassword.rs  main  main.rs  main_copy.rs  view_existing_entries.rs
