[package]
name = "my_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.4"
rand = "0.8"
tokio = {version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "macros"] }
mysql = "26.0.1"
reqwest = { version = "0.11", features = ["json"] }
rpassword = "7"
