[package]
name = "password_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum =  "0.6" 
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros"] }
dotenvy = "0.15"
hyper = "0.14"
